# xandr_recherche_EU

./: 01_cleanup.ipynb  02_find_regional_segments.ipynb  03_find_spicy_segments.ipynb  04_post_process_hand_filtered_dataset.ipynb  eu_countries.json  filet_eu.json  filet_global.csv  filet_us.csv  filtered_eu_segments_master.csv  pyproject.toml  readme.md  spicy_words.py  utils.py
eu_segments_by_broker/: Adsquare_(Data_Provider).csv  Audiences_by_Oracle_(BlueKai_Datalogix_AddThis).csv  Audiens_SRL.csv  Eyeota.csv  Greenhouse_Group_BV.csv  GroupM_NL_-_GH_6924.csv  KBM_Group.csv  Lotame.csv  Nielsen_Marketing_Cloud.csv  Semasio_GmbH_(Data_Provider).csv  ZeoTap.csv  digitalAudience.csv  other.csv
eu_segments_by_category/: Finanzstatus.csv  Gesundheit.csv  Kinder.csv  Religion.csv  Sexualleben_sexuelle_Orientierung.csv  persönliche_Schwächen.csv  politische_Meinungen.csv
eu_segments_by_country/: austria.csv  belgium.csv  croatia.csv  denmark.csv  finland.csv  france.csv  germany.csv  greece.csv  italy.csv  netherlands.csv  poland.csv  portugal.csv  slovakia.csv  spain.csv  sweden.csv
