[tool.poetry]
name = "xandr-recherche-eu"
version = "0.1.0"
description = ""
authors = ["Johannes Gille and Sebastian Meineck for [netzpolitik.org](netzpolitik.org), August 2023"]
license = "MIT"
readme = "readme.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.4"
numpy = "^1.26.3"
swifter = "^1.4.0"
ipykernel = "^6.28.0"
unidecode = "^1.3.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
